--- a/app/views/admin/admin-profile.html.twig
+++ b/app/views/admin/admin-profile.html.twig
@@ -8,7 +8,7 @@
         <div class="col-auto mb-3">
           <h1 class="page-header-title">
             <div class="page-header-icon">
-            <i class="fas fa-user"></i>
+              <i class="fas fa-user"></i>
             </div>
             Détails du Profile
           </h1>
@@ -68,7 +68,7 @@
                       <!-- Form Group (username)-->
                       <div class="mb-3">
                         <label class="small mb-1" for="inputUsername">Nom d'utilisateur (le nom qui s'affichera sur votre profile)</label>
-                        <input class="form-control" id="inputUsername" type="text" placeholder="Enter your username" name="userName"name="userName"  value="{{user.userName}}"/>
+                        <input class="form-control" id="inputUsername" type="text" placeholder="Enter your username" name="userName" value="{{user.userName}}"/>
                       </div>
                       <!-- Form Group (email address)-->
                       <div class="mb-3">
@@ -88,7 +88,7 @@
                           <input class="form-control" id="inputPassWordConfirm" type="password" name="passWordConfirm" placeholder="Confirmez votre nouveau mot de passe"/>
                         </div>
                       </div>
-                      
+
                       <!-- Save changes button-->
                       <button class="btn btn-primary disabled" type="button">Enrégistrer</button>
                     </form>
