adding favicon.ico

--- a/app/views/templates/blogLayout.html.twig
+++ b/app/views/templates/blogLayout.html.twig
@@ -8,7 +8,7 @@
       <meta name="author" content="Développeur Full Satck Adjoukou AGBELOU"/>
       <title>Adjoukou AGBELOU Blog</title>
       <link rel="icon" type="image/x-icon" href="/../mon-blog/public/assets/img/logo.png"/>
-      <link rel="icon" type="image/x-icon" href="/../mon-blog/public/assets/favicon.ico"/>
+      <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
       <!-- font awesome icon-->
       <script data-search-pseudo-elements="data-search-pseudo-elements" defer="defer" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" crossorigin="anonymous"></script>
