--- a/app/views/templates/adminLayout.html.twig
+++ b/app/views/templates/adminLayout.html.twig
@@ -10,7 +10,7 @@
       <title>Adjoukou Dashboard</title>
       <link href="/../mon-blog/public/css/adminStyles.css" rel="stylesheet"/>
       <link rel="icon" type="image/x-icon" href="/../mon-blog/public/assets/img/logo.png"/>
-      <link rel="icon" type="image/x-icon" href="/../mon-blog/public/assets/favicon.ico"/>
+      <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
       <script data-search-pseudo-elements="data-search-pseudo-elements" defer="defer" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/easymde@2.18.0/dist/easymde.min.js"></script>
