update after new SymfonyInsign analyse

--- a/app/views/blog/home.html.twig
+++ b/app/views/blog/home.html.twig
@@ -47,14 +47,14 @@
             <div class="col-lg-6 d-lg-none" data-aos-delay="100"><img class="img-fluid" src="/../mon-blog/public/assets/img/backgrounds/Adjoukou-Agbelou-img.jpg" alt="Adjoukou AGBELOU Développeur Concepteur D'application"/>
             </div>
             <div class="col-lg-6 mb-5">
-              <h1 class="page-header-ui-title mt-5">Développeur Concepteur D'Application PHP/SYMFONY</h1>
-              <p class="page-header-ui-text mb-5">Welcome to SB UI Kit Pro, a toolkit for building beautiful web interfaces, created by the development team at Start Bootstrap.</p>
+              <h1 class="page-header-ui-title mt-5">Concepteur Développeur D'Application PHP/SYMFONY</h1>
+              <p class="page-header-ui-text mb-5">Je souhaite intégrer une équipe au sein de votre entreprise, où je pourrais poursuivre mon perfectionnement et mettre en œuvre mes compétences</p>
               <div class="d-flex flex-column flex-sm-row">
                 <a class="btn btn-lg btn-secondary fw-500 me-sm-3 mb-3 mb-sm-0" href="tel:+33662272975">
                   Appeler Ici
                   <i class="ms-2" data-feather="arrow-right"></i>
                 </a>
-                <a class="btn btn-lg btn-secondary-soft text-secondary fw-500" href="/../mon-blog/public/assets/img/mon-cv/CV_Stage_Alternance-Adjoukou_AGBELOU.pdf" target="_blank">
+                <a class="btn btn-lg btn-secondary-soft text-secondary fw-500" href="/../mon-blog/public/assets/img/mon-cv/CV-Adjoukou_AGBELOU_RQTH_FullStack_PHP-Symfony_WordPress.pdf" target="_blank">
                   <i class="fas fa-file-pdf"></i>
                   Télécharger mon CV
                 </a>
@@ -148,7 +148,7 @@
           </div>
           <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
             <div class="mb-5 text-light">
-              <h2 class="text-info">MON-BLOG Espace Administratieur</h2>
+              <h2 class="text-info">Espace Administratieur MON-BLOG </h2>
               <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
             </div>
             <div class="row gx-5">
@@ -423,7 +423,7 @@
             <a class="text-secondary" href="mailto:mike.agbelou@gmail.com">mike.agbelou@gmail.com</a>
           </div>
           <div class="col-lg-4 text-lg-end">
-            <a class="btn btn-teal btn-lg fw-500" href="/../mon-blog/public/assets/img/mon-cv/CV_Stage_Alternance-Adjoukou_AGBELOU.pdf" target="_blank">
+            <a class="btn btn-teal btn-lg fw-500" href="/../mon-blog/public/assets/img/mon-cv/CV-Adjoukou_AGBELOU_RQTH_FullStack_PHP-Symfony_WordPress.pdf" target="_blank">
               <i class="fas fa-file-pdf text-white-75 me-2"></i>
               Télécharger mon CV
             </a>
