--- a/app/views/templates/blogLayout.html.twig
+++ b/app/views/templates/blogLayout.html.twig
@@ -113,7 +113,7 @@
                     <a class="{% if page == 'contact' %}active{% endif %}" href="/../mon-blog/contact">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="{% if page == 'login' %}active{% endif %}" href="/../mon-blog/login">Se connecter</a>
+                    <a class="{% if page == 'login' %}active{% endif %}" href="/../mon-blog/login" target="_blank">Espace Administrateur</a>
                   </li>
                 </ul>
               </div>
