update home page text

--- a/app/views/blog/home.html.twig
+++ b/app/views/blog/home.html.twig
@@ -48,7 +48,7 @@
             </div>
             <div class="col-lg-6 mb-5">
               <h1 class="page-header-ui-title mt-5">Concepteur Développeur D'Application PHP/SYMFONY</h1>
-              <p class="page-header-ui-text mb-5">Je souhaite intégrer une équipe au sein de votre entreprise, où je pourrais poursuivre mon perfectionnement et mettre en œuvre mes compétences</p>
+              <p class="page-header-ui-text mb-5">Passionné par la conception d'applications web, d'outils, et d'applications dédiés au partage et à l'innovation, je souhaite intégrer votre entreprise au sein d'une équipe dynamique. Mon objectif est de poursuivre mon perfectionnement et de mettre en œuvre mes compétences dans un environnement propice à l'épanouissement professionnel</p>
               <div class="d-flex flex-column flex-sm-row">
                 <a class="btn btn-lg btn-secondary fw-500 me-sm-3 mb-3 mb-sm-0" href="tel:+33662272975">
                   Appeler Ici
@@ -135,7 +135,7 @@
       {% endblock %}
     </section>
 
-    <h1 class="text-center p-5 bg-white mb-0 text-info">PROJETS REALISÉS</h1>
+    <h1 class="text-center p-5 bg-white mb-0 text-dark">PROJETS REALISÉS</h1>
 
     <section class="bg-dark py-10 text-light">
       <!-- Le contenu de votre première diapositive -->
@@ -148,15 +148,26 @@
           </div>
           <div class="col-lg-6 order-0 order-lg-1 mb-5 mb-lg-0" data-aos="fade-left">
             <div class="mb-5 text-light">
-              <h2 class="text-info">Espace Administratieur MON-BLOG </h2>
-              <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
+              <h2 class="text-info">Projet de Formation</h2>
+              <h3 class="text-info">Blog avec panel d'administration</h3>
+              <p class="lead">Ce Projet individuel d'école consistait à Concevoir et implémenter l'espace d'administration d'un blog. Développer les pages permettant d’administrer un blog via une authentification</p>
             </div>
             <div class="row gx-5">
-              <div class="col-md-6 mb-4">
-                <h6 class="text-info">Landing Pages</h6>
-                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
-                <a class="small text-arrow-icon" href="#!">
-                  Learn More
+              <div class="mb-4">
+                <h6 class="text-white">Compétences évaluées</h6>
+                <p class="mb-2 small">Assurer le suivi qualité d’un projet, 
+                  Proposer un code propre et facilement évolutif, 
+                  Créer et maintenir l’architecture technique du site
+                  Créer une page web permettant de recueillir les informations saisies par un internaute
+                  Estimer une tâche et tenir les délais
+                  Gérer ses données avec une base de données
+                  Rédiger les spécifications détaillées du projet
+                  Analyser un cahier des charges
+                  Choisir une solution technique adaptée parmi les solutions existantes si cela est pertinent
+                  Conceptualiser l'ensemble de son application en décrivant sa structure (Entités / Domain Objects)</p>
+                {# <p class="mb-2 small">Analyse et recueil d'informations, conception et modélisation de données(UML et autres diagrammes), Conception de la Base de Données, PHP-8, Programation Orienté Object avec le CRUD, MVC, fonctionnement d'un framework, réalisation de tests, utilisation de composer et des bibliothèques, methodologie agile, git</p> #}
+                <a class="small text-arrow-icon text-info" href="https://github.com/Mike031289/openClassrooms_projet-5_blog" target="_blank">
+                  Lien vers le projet
                   <i data-feather="arrow-right"></i>
                 </a>
               </div>
@@ -179,14 +190,14 @@
           <div class="col-lg-6 order-1 order-lg-0 mb-5 mb-lg-0" data-aos="fade-right">
             <div class="mb-5 text-dark">
               <h2 class="text-info">LES BÂTISSEURS SAS</h2>
-              <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
+              <p class="lead">Projet réalisé en entreprise lors de mon alternance. L'objectif était de concevoir et développer un site vitrine et un espace membre de l'entreprise</p>
             </div>
             <div class="row gx-5">
               <div class="col-md-6 mb-4">
-                <h6 class="text-info">Landing Pages</h6>
-                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
-                <a class="small text-arrow-icon" href="#!">
-                  Learn More
+                <h6 class="text-dark">Compétences travaillées</h6>
+                <p class="mb-2 small">Analyse et recueil d'informations, conception et modélisation de données(UML et autres diagrammes), Conception de la Base de Données, PHP-7, Programation Orienté Object, MVC, réalisation de tests fonctionnels, methodologie agile scrum, git</p>
+                <a class="small text-arrow-icon text-info" href="https://github.com/Mike031289/openClassrooms_projet-5_blog" target="_blank">
+                  Lien vers le projet
                   <i data-feather="arrow-right"></i>
                 </a>
               </div>
@@ -213,10 +224,10 @@
             </div>
             <div class="row gx-5">
               <div class="col-md-6 mb-4">
-                <h6 class="text-info">Landing Pages</h6>
-                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
-                <a class="small text-arrow-icon" href="#!">
-                  Learn More
+                <h6 class="text-white">Compétences travaillées</h6>
+                <p class="mb-2 small">Analyse et recueil d'informations, conception et modélisation de données(UML et autres diagrammes), Conception de la Base de Données, PHP-8, Programation Orienté Object, MVC, fonctionnement d'un framework, réalisation de tests, utilisation de composer et des bibliothèques, methodologie agile, git</p>
+                <a class="small text-arrow-icon text-info" href="https://github.com/Mike031289/openClassrooms_projet-5_blog" target="_blank">
+                  Lien vers le projet
                   <i data-feather="arrow-right"></i>
                 </a>
               </div>
@@ -239,14 +250,14 @@
           <div class="col-lg-6 order-1 order-lg-0 mb-5 mb-lg-0" data-aos="fade-right">
             <div class="mb-5 text-dark">
               <h2 class="text-info">MON-BLOG Blog</h2>
-              <p class="lead">When you purchase this UI Kit, you get access to a robust suite of powerful tools and components to help you build your next landing page quickly and easily.</p>
+              <p class="lead">Ce Projet individuel d'école consistait à Concevoir et implémenter mon blog personnel. Développer la page d'accueil où je me présente avec mes informations de contact, les pages permettant de consulter les articles, la page contact, un espace membre avec un système d'inscription et d'authentification d'un membre en lui donnant droit d'ajouter des commentaires aux articles</p>
             </div>
             <div class="row gx-5">
               <div class="col-md-6 mb-4">
-                <h6 class="text-info">Landing Pages</h6>
-                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
-                <a class="small text-arrow-icon" href="#!">
-                  Learn More
+                <h6 class="text-dark">Compétences évaluées</h6>
+                <p class="mb-2 small">Analyse et recueil d'informations, conception et modélisation de données(UML et autres diagrammes), Conception de la Base de Données, PHP-8, Programation Orienté Object, MVC, fonctionnement d'un framework, réalisation de tests, utilisation de composer et des bibliothèques, methodologie agile, git</p>
+                <a class="small text-arrow-icon text-info" href="https://github.com/Mike031289/openClassrooms_projet-5_blog" target="_blank">
+                  Lien vers le projet
                   <i data-feather="arrow-right"></i>
                 </a>
               </div>
@@ -273,10 +284,10 @@
             </div>
             <div class="row gx-5">
               <div class="col-md-6 mb-4">
-                <h6 class="text-info">Landing Pages</h6>
-                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
-                <a class="small text-arrow-icon" href="#!">
-                  Learn More
+                <h6 class="text-white">Compétences travaillées</h6>
+                <p class="mb-2 small">Analyse et recueil d'informations, conception et modélisation de données(UML et autres diagrammes), Conception de la Base de Données, PHP-8, Programation Orienté Object, MVC, fonctionnement d'un framework, réalisation de tests, utilisation de composer et des bibliothèques, methodologie agile, git</p>
+                <a class="small text-arrow-icon text-info" href="https://github.com/Mike031289/openClassrooms_projet-5_blog" target="_blank">
+                  Lien vers le projet
                   <i data-feather="arrow-right"></i>
                 </a>
               </div>
@@ -303,10 +314,10 @@
             </div>
             <div class="row gx-5">
               <div class="col-md-6 mb-4">
-                <h6 class="text-info">Landing Pages</h6>
-                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
-                <a class="small text-arrow-icon" href="#!">
-                  Learn More
+                <h6 class="text-dark">Compétences travaillées</h6>
+                <p class="mb-2 small">Analyse et recueil d'informations, conception et modélisation de données(UML et autres diagrammes), Conception de la Base de Données, PHP-8, Programation Orienté Object, MVC, fonctionnement d'un framework, réalisation de tests, utilisation de composer et des bibliothèques, methodologie agile, git</p>
+                <a class="small text-arrow-icon text-info" href="https://dmdprod.com/chaletcaviar" target="_blank">
+                  Lien vers le projet
                   <i data-feather="arrow-right"></i>
                 </a>
               </div>
@@ -333,10 +344,10 @@
             </div>
             <div class="row gx-5">
               <div class="col-md-6 mb-4">
-                <h6 class="text-info">Landing Pages</h6>
-                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
-                <a class="small text-arrow-icon" href="#!">
-                  Learn More
+                <h6 class="text-white">Compétences travaillées</h6>
+                <p class="mb-2 small">Analyse et recueil d'informations, conception et modélisation de données(UML et autres diagrammes), Conception de la Base de Données, PHP-8, Programation Orienté Object, MVC, fonctionnement d'un framework, réalisation de tests, utilisation de composer et des bibliothèques, methodologie agile, git</p>
+                <a class="small text-arrow-icon text-info" href="https://dmdprod.com/filmspleinair" target="_blank">
+                  Lien vers le projet
                   <i data-feather="arrow-right"></i>
                 </a>
               </div>
@@ -363,10 +374,10 @@
             </div>
             <div class="row gx-5">
               <div class="col-md-6 mb-4">
-                <h6 class="text-info">Landing Pages</h6>
-                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
-                <a class="small text-arrow-icon" href="#!">
-                  Learn More
+                <h6 class="text-dark">Compétences travaillées</h6>
+                <p class="mb-2 small">Analyse et recueil d'informations, conception et modélisation de données(UML et autres diagrammes), Conception de la Base de Données, PHP-8, Programation Orienté Object, MVC, fonctionnement d'un framework, réalisation de tests, utilisation de composer et des bibliothèques, methodologie agile, git</p>
+                <a class="small text-arrow-icon text-info" href="https://github.com/Mike031289/openClassrooms_projet-5_blog" target="_blank">
+                  Lien vers le projet
                   <i data-feather="arrow-right"></i>
                 </a>
               </div>
@@ -393,10 +404,10 @@
             </div>
             <div class="row gx-5">
               <div class="col-md-6 mb-4">
-                <h6 class="text-info">Landing Pages</h6>
-                <p class="mb-2 small">We've crafted landing page examples for many popular business and product types.</p>
-                <a class="small text-arrow-icon" href="#!">
-                  Learn More
+                <h6 class="text-white">Compétences travaillées</h6>
+                <p class="mb-2 small">Analyse et recueil d'informations, conception et modélisation de données(UML et autres diagrammes), Conception de la Base de Données, PHP-8, Programation Orienté Object, MVC, fonctionnement d'un framework, réalisation de tests, utilisation de composer et des bibliothèques, methodologie agile, git</p>
+                <a class="small text-arrow-icon text-info" href="https://github.com/Mike031289/openClassrooms_projet-5_blog" target="_blank">
+                  Lien vers le projet
                   <i data-feather="arrow-right"></i>
                 </a>
               </div>
